Design mask (weather and biome) text updates

--- a/Core/EnviromentalDesignMasks/designmasks/DesignMaskArcticDayHeavySnowfall.json
+++ b/Core/EnviromentalDesignMasks/designmasks/DesignMaskArcticDayHeavySnowfall.json
@@ -2,7 +2,7 @@
   "Description": {
     "Id": "DesignMaskArcticDayHeavySnowfall",
     "Name": "Heavy Snowfall",
-    "Details": "Polar biomes increase a unit's Heat-sinking ability by 20%, and sensors by a similar amount. Heavy snowfall limits vision to 75% of normal and reduces movement for Mechs and wheeled units by 10%. All units get +1 defense.",
+    "Details": "Polar biomes increase heat sinking and sensor efficiency by 20%. Heavy snowfall reduces visibility to 75%, and movement cost for 'Mechs and wheeled vehicles is increased by 10%. All units have +1 Defense.",
     "Icon": "uixSvgIcon_biome_Polar"
   },
   "heatSinkMultiplier": 1.2,
