--- a/Core/EnviromentalDesignMasks/designmasks/DesignMaskBiomeLunarVacuum.json
+++ b/Core/EnviromentalDesignMasks/designmasks/DesignMaskBiomeLunarVacuum.json
@@ -2,7 +2,7 @@
   "Description": {
     "Id": "DesignMaskBiomeLunarVacuum",
     "Name": "Lunar Sunset",
-    "Details": "Units in a vacuum sink only 65% of their normal Heat. Ballstic and missile weapons, as well as jump jets, gain 30% more max range thanks to reduced gravity.",
+    "Details": "Vacuum decreases heat sinking efficiency to 65%. Reduced gravity results in ballistic and missile weapons and jump jets having 30% more range.",
     "Icon": "uixSvgIcon_biome_Vacuum"
   },
   "heatSinkMultiplier": 0.65,
