--- a/Core/EnviromentalDesignMasks/designmasks/DesignMaskBiomeMartianVacuum.json
+++ b/Core/EnviromentalDesignMasks/designmasks/DesignMaskBiomeMartianVacuum.json
@@ -2,7 +2,7 @@
   "Description": {
     "Id": "DesignMaskBiomeMartianVacuum",
     "Name": "Martian Day",
-    "Details": "Units in a partial vacuum sink only 75% of their normal Heat. Ballstic and missile weapons, as well as jump jets, gain 15% more max range thanks to reduced gravity.",
+    "Details": "Vacuum decreases heat sinking efficiency to 65%. Reduced gravity results in ballistic and missile weapons and jump jets having 15% more range.",
     "Icon": "uixSvgIcon_biome_PartialVacuum"
   },
   "heatSinkMultiplier": 0.75,
