--- a/Core/EnviromentalDesignMasks/designmasks/DesignMaskBiomeTundraFrozen.json
+++ b/Core/EnviromentalDesignMasks/designmasks/DesignMaskBiomeTundraFrozen.json
@@ -2,7 +2,7 @@
   "Description": {
     "Id": "DesignMaskBiomeTundraFrozen",
     "Name": "Tundra Day",
-    "Details": "Tundra biomes increase a unit's Heat-sinking ability by 20%, and visibility on sensors by a similar amount.",
+    "Details": "Tundra biomes increase heat sinking and sensor efficiency by 20%.",
     "Icon": "uixSvgIcon_biome_Cooled"
   },
   "heatSinkMultiplier": 1.2,
