--- a/Core/EnviromentalDesignMasks/designmasks/DesignMaskJungleDayAllergySeason.json
+++ b/Core/EnviromentalDesignMasks/designmasks/DesignMaskJungleDayAllergySeason.json
@@ -2,7 +2,7 @@
   "Description": {
     "Id": "DesignMaskJungleDayAllergySeason",
     "Name": "Pollen Clouds",
-    "Details": "Tropical biomes increase a unit's Heat-sinking ability by 10% due to moisture clinging to exhaust vents. Clouds of pollen obscure everything, reducing sensor and visual range to 70% of normal. All units gain +2 defense and take 5% more damage from all sources.",
+    "Details": "Tropical biomes increase heat sinking efficiency by 10% due to moisture clinging to exhaust vents. Clouds of pollen obscure everything, reducing visibility and sensor efficiency to 70%. All units have +2 Defense and take 5% more damage.",
     "Icon": "uixSvgIcon_biome_Tropical"
   },
   "heatSinkMultiplier": 1.1,
