All ability texts edited

--- a/Core/StrategicOperations/abilities/AbilityDefCMD_UAVLaunch.json
+++ b/Core/StrategicOperations/abilities/AbilityDefCMD_UAVLaunch.json
@@ -2,7 +2,7 @@
   "Description": {
     "Id": "AbilityDefCMD_UAVLaunch",
     "Name": "UAV Launch",
-    "Details": "DEPLOYS A UAV FROM THE UNIT'S STORAGE.\r\n\r\n <b><color=#e11919>Costs 10 000 C-Bills per use!</color></b>\r\n\r\n <b><color=#15df37>Can only deploy one UAV per contract!\n Cannot be used in duels, Solaris matches or on lunar biomes.</color></b>",
+    "Details": "ACTION: Deploy a UAV from storage.\r\n\r\n <b><color=#e11919>Costs 10 000 C-bills per use!</color></b>\r\n\r\n <b><color=#15df37>Can only deploy one UAV per contract!\nCannot be used in duels, Solaris matches or on lunar biomes.</color></b>",
     "Icon": "uav"
   },
   "ActivationTime": "CommandAbility",
