--- a/Core/Flashpoints/NecromoNightmare/contract/zombies/CaptureEscort_AppearancesZ1.json
+++ b/Core/Flashpoints/NecromoNightmare/contract/zombies/CaptureEscort_AppearancesZ1.json
@@ -1046,7 +1046,7 @@
               "items": [],
               "tagSetSourceFile": "tags/SpawnEffectTags"
             },
-            "pilotDefId": "pilot_FP_AIZombie",
+            "pilotDefId": "pilot_dead_fred",
             "pilotTagSet": {
               "items": [],
               "tagSetSourceFile": "tags/PilotTags"
@@ -1085,7 +1085,7 @@
               "items": [],
               "tagSetSourceFile": "tags/SpawnEffectTags"
             },
-            "pilotDefId": "pilot_FP_AIZombie",
+            "pilotDefId": "pilot_dead_shane",
             "pilotTagSet": {
               "items": [],
               "tagSetSourceFile": "tags/PilotTags"
@@ -1124,7 +1124,7 @@
               "items": [],
               "tagSetSourceFile": "tags/SpawnEffectTags"
             },
-            "pilotDefId": "pilot_FP_AIZombie",
+            "pilotDefId": "pilot_snowey",
             "pilotTagSet": {
               "items": [],
               "tagSetSourceFile": "tags/PilotTags"
@@ -1163,7 +1163,7 @@
               "items": [],
               "tagSetSourceFile": "tags/SpawnEffectTags"
             },
-            "pilotDefId": "pilot_FP_AIZombie",
+            "pilotDefId": "pilot_zombiegirl",
             "pilotTagSet": {
               "items": [],
               "tagSetSourceFile": "tags/PilotTags"
