various fixes and add new pilot for testing

--- a/Core/MechAffinity/settings.json
+++ b/Core/MechAffinity/settings.json
@@ -624,6 +624,12 @@
         "svgAssetId": ""
       },
       {
+        "colour": "#5409e8",
+        "tag": "pilot_testOpPilot",
+        "descriptionDefId": "UnitMechWarriorOPPilot",
+        "svgAssetId": "PilotIcons_RTO_W"
+      },
+      {
         "colour": "#CC9933",
         "tag": "pilot_rtcrew",
         "descriptionDefId": "UnitMechWarriorRtCrew",
