--- a/Core/Flashpoints/NecromoNightmare/pilot/pilot_snowey.json
+++ b/Core/Flashpoints/NecromoNightmare/pilot/pilot_snowey.json
@@ -33,7 +33,7 @@
     "items": [
       "BLACKLISTED",
       "pilot_backer",
-      "name_Zombie",
+      "pilot_Zombie",
       "pilot_military",
       "pilot_bookish",
       "pilot_tech",
