Added a New Mech, currently only a Rogueelite. Will make Stock Variants at a later date.

--- a/Core/MechAffinity/AffinityDefs/AffinityDef_chassis_Scrapper.json
+++ b/Core/MechAffinity/AffinityDefs/AffinityDef_chassis_Scrapper.json
@@ -63,6 +63,7 @@
       "liberator_65",
       "stoopinghawk_55",
       "tianzong_75",
+      "madfox_85",
       "wildfire_65"
     ],
     "idType": "AssemblyVariant",
