--- a/Optionals/RogueTribes/Base/mech/mechdef_lynx_LNX-9M.json
+++ b/Optionals/RogueTribes/Base/mech/mechdef_lynx_LNX-9M.json
@@ -12,7 +12,7 @@
       "unit_clan",
       "unit_tribe",
       "unit_jumpOK",
-      "unit_core",
+      "unit_optional_rogue_tribes",
       "unit_ready",
       "unit_release",
       "unit_chassis_lynx",
