5th Element Pilot Pack
Adds 4 character pilots from 5th Element: Korben Dallas, Leeloo, Father Vito and Ruby Rhod;
"+1 Accuracy, +5% Sight & Sensors" when dropping all 4 pilots;
new pilot Quirk - Skittish: "+1% chance for this pilot to eject, -1 Enemy Initiative, -1 Health";
new pilot Quirk - Divine Intervention: "+1 Evasion Generated, critical hit chance by 1%, -1 Guts, +35% Pilot Upkeep";
new passive Ability - Lay on Hands: "Decreased Bleeding Rate to allies within 5 hex radius. Yellow Circle. Does not stack."

--- a/Core/Abilifier/AbilityRealizerSettings.json
+++ b/Core/Abilifier/AbilityRealizerSettings.json
@@ -85,7 +85,8 @@
 			"pilot_recruitmentThievery": ["AbilityDefCMD_MechDrop_Narf"],
 			"pilot_whoLetTheDogsOut": ["AbilityDefCMD_MechDrop_Liquidforce"],
 			"pilot_ferretMaster": ["AbilityDefCMD_TankDrop_Cargo"],
-			"pilot_iJustWantedInfernos":["AbilityDefCMD_Strafe_Alekto"]
+			"pilot_iJustWantedInfernos":["AbilityDefCMD_Strafe_Alekto"],
+			"pilot_divineIntervention":["AbilityDef_LayOnHands"]
 		},
         "SwapAIAbilities": {
 		"AbilityDefGu8": "AbilityGu8AI",
