Update Difficulty Icons/Colours
Update to the Skull and Chevron Icons and colours
Tiers 0-3 unchanged;
Tier 4 changed to yellow
Tier 5 changed to bronze (chevron icon updated)
Tier 6 changed to Silver (chevron icon updated)
Tier 7 changed to Gold (chevron icon updated)

--- a/Core/DropCostsEnhanced/settings.json
+++ b/Core/DropCostsEnhanced/settings.json
@@ -201,11 +201,19 @@
   },
   {
     "rung" : 4,
-    "colour" : "#D5B56E"
+    "colour" : "#FFFF00"
   },
   {
     "rung" : 5,
-    "colour" : "#FFFF00"
+    "colour" : "#CE8946"
+  },
+  {
+    "rung": 6,
+    "colour": "#C4C4C4"
+  },
+  {
+    "rung": 7,
+    "colour": "#E5CF87"
   }
 ]
 }
