Altmap affinity groups

--- a/Core/MechAffinity/settings.json
+++ b/Core/MechAffinity/settings.json
@@ -294,6 +294,38 @@
           "Toadie2_5",
           "Toadie3_5"
         ]
+      },
+      {
+        "affinityId": "AxmanTrooper",
+        "assemblyGroup": [
+          "chassisdef_axman_AXM-6X_Flamer",
+          "chassisdef_axman_AXM-6X_LAC5",
+          "chassisdef_axman_AXM-6X_MML",
+          "chassisdef_axman_AXM-6X_MRM",
+          "chassisdef_axman_AXM-6X_PPC",
+          "chassisdef_axman_AXM-S7X"
+        ]
+      },
+      {
+        "affinityId": "HatamotoFighter",
+        "assemblyGroup": [
+          "chassisdef_hatamoto-chi_HTM-27T_daniel",
+          "chassisdef_hatamoto-chi_HTM-SAM",
+        ]
+      },
+      {
+        "affinityId": "CommandoFighter",
+        "assemblyGroup": [
+          "chassisdef_commando_COM-SP-2",
+          "chassisdef_commando_COM-SP",
+        ]
+      },
+      {
+        "affinityId": "BlackknightFighter",
+        "assemblyGroup": [
+          "chassisdef_blackknight_BL-X-KNT",
+          "chassisdef_blackknight_BL-X2-KNT",
+        ]
       }
     ],
     "prefabOverrides": [
