--- a/Optionals/Superheavys/Base/vehicle/vehicledef_PROJECT_SECTARIAN_SUPERHEAVY_TANK.json
+++ b/Optionals/Superheavys/Base/vehicle/vehicledef_PROJECT_SECTARIAN_SUPERHEAVY_TANK.json
@@ -17,6 +17,7 @@
       "ClanProtectorate",
       "comstar",
       "davion",
+      "FederatedCommonwealth",
       "Davion3150",
       "DuchyOfAndurien",
       "DuchyOfAndurien3150",
@@ -28,6 +29,7 @@
       "kurita",
       "Kurita3150",
       "liao",
+      "TikonovFreeRepublic",
       "Liao3150",
       "Locals",
       "magistracyofcanopus",
