Clint prefab swap

--- a/Optionals/ExperimentalWeapons/Base/chassis/chassisdef_clint_eastwood.json
+++ b/Optionals/ExperimentalWeapons/Base/chassis/chassisdef_clint_eastwood.json
@@ -49,9 +49,9 @@
   "YangsThoughts": "This is a custom Clint mech of a Solaris Gladiator, who shared the name with his favorite mech. The pilot supposedly called Clint Eastwood was well known by fans and his enemies, that after making gaping holes with his customized weaponry in your mech, he likes to shout in all comms \"Do you feel lucky, punk? Do ya??!.",
   "MovementCapDefID": "movedef_mediummech",
   "PathingCapDefID": "pathingdef_medium",
-  "HardpointDataDefID": "hardpointdatadef_clint",
-  "PrefabIdentifier": "chrprfmech_clintbase-001",
-  "PrefabBase": "clint",
+  "HardpointDataDefID": "hardpointdatadef_ionclint",
+  "PrefabIdentifier": "chrprfmech_ionclintbase-001",
+  "PrefabBase": "ionclint",
   "Tonnage": 40.0,
   "InitialTonnage": 4.0,
   "weightClass": "MEDIUM",
