--- a/Optionals/RogueTribes/Campaign/campaign/Ghosts_of_Retribution.yml
+++ b/Optionals/RogueTribes/Campaign/campaign/Ghosts_of_Retribution.yml
@@ -77,7 +77,7 @@ nodes:
               difficulty: 1
               at: starsystemdef_Custozza
               description: |
-                  A long-abandoned manufacturing colony deep in the Periphery, Custozza has been off the map for decades—until now. A recovered BattleMech component points here, and what was once a forgotten industrial relic may hide the next link in a dangerous chain. Whatever force left its mark on Maisons may have passed through Custozza… or still be there.
+                  A long-abandoned manufacturing colony deep in the Periphery, Custozza has been off the map for decades. Until now. A recovered BattleMech component points here, and what was once a forgotten industrial relic may hide the next link in a dangerous chain. Whatever force left its mark on Maisons may have passed through Custozza… or still be there.
         - goto: Common-EchoesInTheDust
 
     Common-EchoesInTheDust:
